# ObfusC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
example/: CMakeLists.txt  main.cpp
include/: common.hpp
source/: CMakeLists.txt  FuncAttribute.cpp  FuncAttribute.hpp  FuncAttributeStore.cpp  FuncAttributeStore.hpp  IObfuscationPass.hpp  test.cpp
source/BCF/: BcfAttribute.cpp  BcfAttribute.hpp  BcfPass.cpp  BcfPass.hpp  CMakeLists.txt
source/CFF/: CMakeLists.txt  CffAttribute.cpp  CffAttribute.hpp  CffPass.cpp  CffPass.hpp
source/ISUB/: CMakeLists.txt  iSubAttribute.cpp  iSubAttribute.hpp  iSubPass.cpp  iSubPass.hpp
source/MBA/: CMakeLists.txt  MbaAttribute.cpp  MbaAttribute.hpp  MbaPass.cpp  MbaPass.hpp
source/Passes/: CMakeLists.txt  FuncAnnotationsParser.cpp  FuncAnnotationsParser.hpp  IObfuscationPass.cpp  IObfuscationPass.hpp  ObfuscationPassManager.cpp  ObfuscationPassManager.hpp
tests/: TestAll.cpp  bcfTest.cpp  cffTest.cpp  isubTest.cpp  main.cpp  mbaTest.cpp
